# cv_maker

./: .dockerignore  .gitignore  Dockerfile  config.py  pyproject.toml  requirements.txt  settings.yaml
src/: package-lock.json  package.json  tailwind.config.js
src/core/: admin.py  apps.py  forms.py  models.py  receivers.py  signals.py  translation.py  urls.py  views.py
src/core/locale/en_US/LC_MESSAGES/: django.mo  django.po
src/core/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/core/migrations/: 0001_initial.py  0002_city_name_en_city_name_pt_br_country_name_en_and_more.py  0003_alter_userskill_options_remove_userskill_level.py  0004_rename_cv_language_cvlanguage_and_more.py  0005_alter_user_city.py  0006_remove_education_unique_education_and_more.py  0007_educationinstitution_acronym.py  0008_socialnetwork_suffix.py  0009_brief_company_cv_brief_company_brief_user_role.py
src/core/static/css/: styles.css  styles_out.css
src/core/templates/: home.html  login.html  unused.html
src/core/templates/cv/: index.html
src/cv_maker/: settings.py  urls.py
